--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   </div>
 </header>
 <section class="slider-home-1 owl-carousel owl-theme">
-  <div class="hero-section item" style="background-image: url(https://img.freepik.com/free-photo/balloons-arrangement-with-purple-background_23-2148935857.jpg?t=st=1713257381~exp=1713260981~hmac=4b3d3ea72a03c2d1035620a6be0400caa290144bb973d2fc4352ff1c4d1fcc91&w=1380);">
+  <div class="hero-section item" style="background-image: url(https://wallpapercosmos.com/w/full/6/3/3/169452-3840x2160-desktop-4k-balloons-background-photo.jpg);">
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
