--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       </div>
     </div>
   </div>
-  <div class="hero-section item" style="background-image: url(https://img.freepik.com/free-photo/joyful-celebration-with-colorful-balloons-flying-background-generated-by-ai_188544-151601.jpg?t=st=1713257685~exp=1713261285~hmac=0355cf7af84b7dc70ee32f2ee040a9ba4a811f5a76c0f98cfbb6a3e36aee44f0&w=1380);">
+  <div class="hero-section item" style="background-image: url(https://img.pikbest.com/origin/09/22/77/43PpIkbEsTKMY.jpg!w700wp);">
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
