--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
 <section class="gap no-top">
   <div class="container">
     <div class="heading two">
-            <h2>Party Supply and Balloon Recycling</h2>
-            <p>Balloons offers one of the largest online balloon selections in the world.</p>
-            <a href="#" class="btn two"><span>Recycle Now!</span></a>
+            <h2>Помощь в организации вечеринок</h2>
+            <p>Наш магазин организует экологическую переработку шариков</p>
+            <a href="#" class="btn two"><span>Сдать на переработку</span></a>
           </div>
   </div>
 </section>
@@ -414,16 +414,16 @@
   <div class="container">
     <div class="heading">
       <img alt="heading" src="assets/img/heading.png">
-      <h2>Happy Customer Feedback</h2>
-      <p>whats trending at bargain balloons themes</p>
+      <h2>Отзывы</h2>
+      <p>что о нас говорят</p>
     </div>
     <div class="row feedback-slider owl-carousel owl-theme">
       <div class="col-lg-12 item">
         <div class="customer-feedback">
           <i><img class="quote" alt="quote" src="assets/img/quote.png"></i>
-          <p>A huge Thanks Only team to select me for review of product. Its really mean lots to send me products and i like to suggest all to buy them.</p>
-          <h4>James Parkar</h4>
-          <span>September 11, 2023</span>
+          <p>A Огромное спасибо! Единственная компания, которая смогла мне помочь. Доставили кучу классных шаров, советую все!</p>
+          <h4>Иван Парков</h4>
+          <span>11.09.2023</span>
           <div class="star">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -436,7 +436,7 @@
       <div class="col-lg-12 item">
         <div class="customer-feedback">
           <i><img class="quote" alt="quote" src="assets/img/quote.png"></i>
-          <p>A huge Thanks Only team to select me for review of product. Its really mean lots to send me products and i like to suggest all to buy them.</p>
+          <p>Самые качественные шарики. Разные наполнения (насососом, гелием). Долго не сдуваются и очень прочные.</p>
           <h4>Thomas Willimes</h4>
           <span>September 11, 2023</span>
           <div class="star">
