--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
       <div class="col-lg-12 item">
         <div class="customer-feedback">
           <i><img class="quote" alt="quote" src="assets/img/quote.png"></i>
-          <p>A Огромное спасибо! Единственная компания, которая смогла мне помочь. Доставили кучу классных шаров, советую все!</p>
+          <p> Огромное спасибо! Единственная компания, которая смогла мне помочь. Доставили кучу классных шаров, советую все!</p>
           <h4>Иван Парков</h4>
           <span>11.09.2023</span>
           <div class="star">
