--- a/index.html
+++ b/index.html
@@ -437,8 +437,8 @@
         <div class="customer-feedback">
           <i><img class="quote" alt="quote" src="assets/img/quote.png"></i>
           <p>Самые качественные шарики. Разные наполнения (насососом, гелием). Долго не сдуваются и очень прочные.</p>
-          <h4>Thomas Willimes</h4>
-          <span>September 11, 2023</span>
+          <h4>Тома Анкашева</h4>
+          <span>01.01.2023</span>
           <div class="star">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -451,9 +451,9 @@
       <div class="col-lg-12 item">
         <div class="customer-feedback">
           <i><img class="quote" alt="quote" src="assets/img/quote.png"></i>
-          <p>A huge Thanks Only team to select me for review of product. Its really mean lots to send me products and i like to suggest all to buy them.</p>
-          <h4>James Parkar</h4>
-          <span>September 11, 2023</span>
+          <p>Лучший праздник — с этими шариками.</p>
+          <h4>Яна Милевич</h4>
+          <span>12.09.2023</span>
           <div class="star">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -466,8 +466,8 @@
       <div class="col-lg-12 item">
         <div class="customer-feedback">
           <i><img class="quote" alt="quote" src="assets/img/quote.png"></i>
-          <p>A huge Thanks Only team to select me for review of product. Its really mean lots to send me products and i like to suggest all to buy them.</p>
-          <h4>Nomina Morloo</h4>
+          <p>Хороший подарок. Именинник доволен.</p>
+          <h4>Сабрина Сабинина</h4>
           <span>September 11, 2023</span>
           <div class="star">
             <i class="fa-solid fa-star"></i>
